# grecian_computer_puzzle

./: .gitignore  README.md  input_my.csv  mise.toml  prepare_input_file.py  pyproject.toml  solve.py
.github/workflows/: lint.yml
